syntax = "proto3";

package com.coralogixapis.alerting.meta_labels_protobuf.v1;

// Must use that schemas because the metaLabel GRPC service use that schemas
message MetaLabel {
  optional string id = 1; // MetaLabel id: The meta label id
  string key = 2; // MetaLabel key: The meta label key
  optional string value = 3; // MetaLabel value: The meta label value
}
