syntax = "proto3";

package com.coralogixapis.incidents.v1;

import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv3/options/annotations.proto";

message Assignment {
  option (grpc.gateway.protoc_gen_openapiv3.options.openapiv3_schema) = {
    json_schema: {
      title: "Assignment"
      description: "Details of the user who assigned the incident and the user to whom it was assigned"
      required: [
        "assigned_to",
        "assigned_by"
      ]
    }
  };
  UserDetails assigned_to = 1;
  UserDetails assigned_by = 2;
}

message UserDetails {
  option (grpc.gateway.protoc_gen_openapiv3.options.openapiv3_schema) = {
    json_schema: {
      title: "User details"
      required: ["user_id"]
    }
  };
  google.protobuf.StringValue user_id = 1 [(grpc.gateway.protoc_gen_openapiv3.options.openapiv3_field) = {example: "\"user_id\""}];
}
