syntax = "proto3";

package com.coralogixapis.incidents.v1;

import "com/coralogixapis/incidents/v1/incident.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

enum OrderByFields {
  ORDER_BY_FIELDS_UNSPECIFIED = 0;
  ORDER_BY_FIELDS_ID = 1;
  ORDER_BY_FIELDS_SEVERITY = 2;
  ORDER_BY_FIELDS_NAME = 3;
  ORDER_BY_FIELDS_CREATED_TIME = 4;
  ORDER_BY_FIELDS_CLOSED_TIME = 5;
}

message OrderBy {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "OrderBy"
      description: "An order by for an incident"
      required: ["field", "direction"]
    }
  };
  oneof field {
    IncidentFields incident_field = 10;
    google.protobuf.StringValue contextual_label = 11;
  }
  OrderByDirection direction = 2;
}

enum OrderByDirection {
  ORDER_BY_DIRECTION_UNSPECIFIED = 0;
  ORDER_BY_DIRECTION_ASC = 1;
  ORDER_BY_DIRECTION_DESC = 2;
}

message GroupBy {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GroupBy"
      description: "A group by for an incident"
      required: ["field", "order_by_direction"]
    }
  };
  oneof field {
    IncidentFields incident_field = 10;
    google.protobuf.StringValue contextual_label = 11;
  }
  OrderByDirection order_by_direction = 1;
}

message IncidentSearchQuery {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "IncidentSearchQuery"
      description: "An incident search query"
      required: ["query", "field"]
    }
  };
  google.protobuf.StringValue query = 1;
  oneof field {
    IncidentFields incident_field = 10;
    google.protobuf.StringValue contextual_label = 11;
  }
}
